# photo-retriever

./: .gitignore  README.md  Videos - Shortcut.lnk
backend/: .env.example  README.md  create_admin.py  pyproject.toml  requirements.txt  verify_upload.py
backend/app/: __init__.py  config.py  main.py
backend/app/api/: deps.py
backend/app/core/: database.py  logging.py  pinecone_client.py  security.py
backend/app/models/: event.py  image.py  photo.py  user.py
backend/app/routes/: auth.py  health.py  media.py  test_db.py  test_pinecone.py  users.py
backend/app/schemas/: media.py  user.py
backend/app/services/: upload_service.py  vector_store.py
backend/scripts/: test_auth.py  verify_infra.py
docs/: README.md
frontend/: README.md  package-lock.json  package.json  start.ps1
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/dashboard/admin/: page.tsx
frontend/app/dashboard/photographer/: page.tsx
frontend/app/dashboard/user/: page.tsx
frontend/app/login/: page.tsx
frontend/app/signup/: page.tsx
frontend/components/auth/: LoginForm.tsx  SignupForm.tsx
frontend/components/dashboard/: ApprovalInterface.tsx  PhotoGallery.tsx  PhotoUpload.tsx  SelfieUpload.tsx  UploadStatus.tsx
frontend/components/layout/: Navbar.tsx  Sidebar.tsx
frontend/components/ui/: Button.tsx  Card.tsx  ErrorBoundary.tsx  Input.tsx  LoadingSpinner.tsx  Modal.tsx
frontend/types/: auth.ts  photo.ts  user.ts
scripts/: README.md
